examples/ex3/test_cases/failing/check21_and_consists_of_non_bool.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    public int func() {
        int a;
        boolean b;

        a = 5;
        b = true;

        return a && b;
    }
}